--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,13 +3,14 @@ certifi==2018.11.29
 chardet==3.0.4
 colorama==0.4.1
 Django==2.1.7
+django-cors-headers==2.4.0
 django-extensions==2.1.5
 djangorestframework==3.9.1
 idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
-psycopg2-binary
+psycopg2-binary==2.7.7
 pylint==2.2.2
 pytz==2018.9
 requests==2.21.0
