--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "google-maps-react": "^2.0.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-table": "^6.9.2",
     "react-tabs": "^3.0.0",
     "reactstrap": "^7.1.0",
