--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ Django==2.1.7
 django-cors-headers==2.4.0
 django-extensions==2.1.5
 djangorestframework==3.9.1
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
