--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   web:
     image: nginx
+    restart: always
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
@@ -13,6 +14,8 @@ services:
       - backend
   app:
     build: ./backend
+    restart: always
+    env_file: backend/.env
     volumes:
       - ./backend:/code
     ports:
