--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,10 @@ server {
         proxy_pass http://app:8000;
     }
 
+    location /static {
+        alias /usr/src/static;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
